# lttngtop

./: Makefile.am  bootstrap  configure.ac
lib/: Makefile.am
src/: Makefile.am  lttng-session.c  lttngtop.c
